# Datalake-Platform-GUI

./: .dockerignore  .env  .env.example  .git_commit_msg.txt  .gitignore  Bulutistan_AI_Assistant_Cozum_Dokumani.docx  Dockerfile  Finish.md  PHASE.md  README.md  app.py  docker-compose.yml  env.example  requirements-dev.txt  requirements.txt  skeleton.md  test_connection.py
assets/: chatbot.css  chatbot.js  export_pdf.js  faro-init.js  style.css  virt_cluster_filter.js
backend/: requirements.txt
config/: crm_service_mapping.yaml
dash_globe_component/: package-lock.json  package.json  webpack.config.js
dash_hmdl_flow/: MANIFEST.in  package-lock.json  package.json  setup.py  webpack.config.js
data/: query_overrides.json
docgen/: build.js
docs/: AUTH_SYSTEM.md  CACHE_STRATEGY_COMPARISON.md  CRM_SERVICE_MAPPING.md  DOCKER_SETUP.md  FARO_FRONTEND.md  FRONTEND_PERFORMANCE.md  HMDL_CONFIG.md  LOADING_UX_DESIGN.md  OTEL_COLLECTOR.md  PROD_ARCHITECTURE.md  PROJECT_STANDARDS.md  TOPOLOGY_AND_SETUP.md  architecture.md  backend-brief-rack-sellable.md  erisilemeyen-sanallastirma-datasourceleri.md  lessons.md  skills.md  test_results.md  todolist.md  virt-hyperconv-dc13-diagnosis.md
k8s/: ingress.yaml
scripts/: alias_match_impact_report.py  analyze_chatbot_logs.py  apply-webui-migrations-docker.ps1  apply-webui-migrations-docker.sh  backfill_platform_versions.py  e2e_healthcheck.py  (+7 more)
services/datalake-tools-core/: pyproject.toml
services/datalake-tools-core/datalake_tools_core/: __init__.py  api_clients.py  config.py  db_query_registry.py  db_readonly.py  registry.py
(+993 files in other folders)
