[project]
name = "datalake-tools-core"
version = "0.1.0"
description = "Shared read-only tool registry for Datalake AI integrations"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "psycopg2-binary>=2.9.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["datalake_tools_core*"]
